--- a/.css/adminpage.css
+++ b/.css/adminpage.css
@@ -13,7 +13,7 @@ body{
     align-self: center;
  }
  #logo{
-    margin-top: -2vh;
+    margin-top: 0;
     margin-bottom: -5vh;
  }
  #session_info{
@@ -54,7 +54,7 @@ table{
 a:visited{
     color: #000000;
 }
-a:not(#disconnect){
+a:not(#disconnect,#excluir_operador){
     text-decoration: none;
 }
 
@@ -152,20 +152,45 @@ a:not(#disconnect){
     font-family: Montserrat, sans-serif;
     font-size: 2.5vh;
 }
+.identificador_input{
+    float: left;
+    width: 29vw;
+    height: 4vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+}
+#search_bt{
+    cursor: pointer;
+    width: 2.3vw;
+    height: 4vh;
+    justify-content: center;
+    display: flex;
+}
+.natureza_input{
+    border-radius: 2px;
+    border-style: solid ;
+    border-color: #6d6d6d;
+    text-align: center;
+    width: 15vw;
+    height: 3.6vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    background-color: #fff;
+}
 .birthdate_input{
     text-align: center;
     width: 13vw;
-    height: 3vh;
+    height: 3.23vh;
     font-family: Montserrat, sans-serif;
     font-size: 2.5vh;
 }
 .gender_input{
-    border-radius: 3px;
+    border-radius: 2px;
     border-style: solid ;
-    border-color: #b7b7b7;
+    border-color: #6d6d6d;
     text-align: center;
     width: 15vw;
-    height: 4vh;
+    height: 3.66vh;
     font-family: Montserrat, sans-serif;
     font-size: 2.5vh;
     background-color: #fff;
@@ -177,10 +202,87 @@ a:not(#disconnect){
     font-family: Montserrat, sans-serif;
     font-size: 2.5vh;
 }
+.phone_input{
+    text-align: left;
+    width: 13vw;
+    height: 3vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+}
+.mail_input{
+    text-align: left;
+    width: 20vw;
+    height: 3vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+}
 .input_label{
     font-size: 2.5vh;
     font-weight: bolder;
     font-family: Roboto;
     margin-bottom: -0.05vh;
     margin-left: 0.5vh;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+}
+.required{
+    color: red;
+    font-weight: bolder;
+}
+.fields_inline{
+    position: relative;
+    display: flex;
+}
+.birthdate_exhibit{
+    text-align: center;
+    width: 13vw;
+    height: 3.23vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    border: 1px solid rgb(0, 0, 0);
+}
+.gender_exhibit{
+    text-align: center;
+    width: 13vw;
+    height: 3.23vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    border: 1px solid rgb(0, 0, 0);
+}
+.cpf_exhibit{
+    text-align: center;
+    width: 13vw;
+    height: 3.23vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    border: 1px solid rgb(0, 0, 0);
+}
+.matricula_exhibit{
+    text-align: center;
+    width: 13vw;
+    height: 3.23vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    border: 1px solid rgb(0, 0, 0);
+}
+.nome_exhibit{
+    text-align: center;
+    width: 28vw;
+    height: 3.23vh;
+    font-family: Montserrat, sans-serif;
+    font-size: 2.5vh;
+    border: 1px solid rgb(0, 0, 0);
+}
+.id_label{
+    font-size: 1.5vh;
+    font-weight: bolder;
+    font-family: Roboto;
+}
+#excluir_operador{
+    color: red;
+    font-family: Roboto, sans-serif;
+    font-size: 1.5vh;
+    font-weight: bold;
 }
